; ModuleID = '/home/carl/AnghaBench/vlc/src/test/extr_url.c_test_b64.c'
source_filename = "/home/carl/AnghaBench/vlc/src/test/extr_url.c_test_b64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vlc_b64_encode = common dso_local global i32 0, align 4
@vlc_b64_decode = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @test_b64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_b64(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @vlc_b64_encode, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @test(i32 %5, i8* %6, i8* %7)
  %9 = load i32, i32* @vlc_b64_decode, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @test(i32 %9, i8* %10, i8* %11)
  ret void
}

declare dso_local i32 @test(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
